@@ -1,2 +1,2 @@
 Style2;POLYGON((142.928932188135 157.071067811865,144.444297669804 158.314696123025,146.173165676349 159.238795325113,148.049096779839 159.807852804032,150 160,151.950903220161 159.807852804032,153.826834323651 159.238795325113,155.555702330196 158.314696123025,157.071067811865 157.071067811865,158.314696123025 155.555702330196,159.238795325113 153.826834323651,159.807852804032 151.950903220161,160 150,160 50,159.807852804032 48.0490967798387,159.238795325113 46.1731656763491,158.314696123025 44.444297669804,157.071067811865 42.9289321881345,155.555702330196 41.6853038769745,153.826834323651 40.7612046748871,151.950903220161 40.1921471959677,150 40,148.049096779839 40.1921471959677,146.173165676349 40.7612046748871,144.444297669804 41.6853038769745,142.928932188135 42.9289321881345,141.685303876975 44.444297669804,140.761204674887 46.1731656763491,140.192147195968 48.0490967798387,140 50,140 125.857864376269,57.0710678118655 42.9289321881345,55.555702330196 41.6853038769745,53.8268343236509 40.7612046748871,51.9509032201613 40.1921471959677,50 40,48.0490967798387 40.1921471959677,46.1731656763491 40.7612046748871,44.444297669804 41.6853038769745,42.9289321881345 42.9289321881345,41.6853038769746 44.444297669804,40.7612046748871 46.1731656763491,40.1921471959677 48.0490967798387,40 50,40.1921471959677 51.9509032201613,40.7612046748871 53.8268343236509,41.6853038769745 55.555702330196,42.9289321881345 57.0710678118655,142.928932188135 157.071067811865))
-Style1-thinline;MULTIPOINT(102.722861415448 109.63774529252,149.121982482376 109.73967711417,143.583483382672 71.2656025879696,43.6127811517685 46.1928159428694,64.0937528611103 64.3971068453017,158.682821131016 128.593401898251,144.217047639393 142.958464308603,143.193456831568 81.4453566087832,137.923520615253 135.276955473495,149.037141026032 48.2552568132572,85.2284310434278 92.0542008728294,107.117526779992 101.481368449965)
+Style1-thinline;MULTIPOINT(124.719467098431 131.257475277821,155.60408218128 72.9518237434817,106.69719046413 119.774229927365,140.578248132556 153.822320976712,152.641957278627 87.2817137366839,143.433601275019 137.83621232774,94.5170191740369 89.6648113250309,157.562215520436 47.0045167465619,51.5256023126078 40.4134116206039,158.800069139342 117.796996865768,67.1788241389208 69.3638368956401,129.504207562589 133.236854414052)
