@@ -15,8 +15,10 @@
 
 #if POSTGIS_PGSQL_VERSION >= 96
 #define _PARALLEL PARALLEL SAFE
+#define _PARALLEL_RESTRICTED PARALLEL RESTRICTED
 #else
 #define _PARALLEL
+#define _PARALLEL_RESTRICTED
 #endif
 
 /*
